--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <body>
     <main>
         <form id="formCadastro">
-            <div>
+            <h2>Faça seu cadastro</h2>
+            <div class="input-group">
                 <label for="nome">Nome:</label>
                 <input required type="text" id="nome" name="nome" readonly>
             </div>
-            <div>
+            <div class="input-group">
                 <label for="email">Email:</label>
                 <input required type="email" id="email" name="email" readonly>
             </div>
-            <div>
+            <div class="input-group">
                 <label for="senha">Senha:</label>
                 <input required type="password" id="senha" name="senha" readonly>
             </div>
